fix message content wrapping under message info

--- a/index.css
+++ b/index.css
@@ -115,10 +115,12 @@ main {
     display: inline-block;
     width: 20ch;
     text-wrap: nowrap;
+    vertical-align: top;
 }
 
 .content {
     white-space: pre-wrap;
+    display: inline-block;
 }
 
 .timestamp,
